[tool.poetry]
name = "everystreet"
version = "0.1.0"
description = "An algorithm finding #everystreet challenge route on Open Street Map"
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
mk-network = {git = "https://github.com/matejker/network", branch = "master"}
notebook = "^6.1.5"
networkx = "^2.4"
osmnx = "^0.15.1"
matplotlib = "^3.2.1"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
